[package]
name = "gbnf"
version = "0.1.0"
edition = "2021"
description = "A libray for working with GBNF"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
pretty_assertions = "1.4.0"
serde_json = "1.0.111"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
