[package]
name = "gbnf"
version = "0.2.4"
edition = "2024"
description = "A library for working with GBNF"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/richardanaya/gbnf"
documentation = "https://github.com/richardanaya/gbnf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
pretty_assertions = "1.4.0"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
