[package]
name = "gbnf"
version = "0.2.5"
edition = "2024"
description = "A library for working with GBNF"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/richardanaya/gbnf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }

[dev-dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04"] }
pretty_assertions = "1.4.0"
