[package]
name = "jsonschema2gbnf"
version = "0.1.6"
edition = "2021"
description = "Convert JSON Schema to GBNF"
license = "MIT"
repository = "https://github.com/richardanaya/gbnf"
documentation = "https://github.com/richardanaya/gbnf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
gbnf = { path = "../gbnf", version = "0.2.4" }
